Update MessageSender.java